--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "Raleway";
+  src: url("/fonts/Raleway-Regular.ttf");
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -94,6 +99,9 @@
 
   .icon-bg {
     @apply text-foreground;
+  }
+  .badge {
+    @apply inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2;
   }
 }
 
