--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,126 +1,110 @@
 *,
 *::before,
 *::after {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	scroll-behavior: smooth;
-	font-family: "Raleway", Arial, sans-serif;
-	font-weight: 300;
-	font-style: normal;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+  font-family: "Raleway", Arial, sans-serif;
+  font-weight: 300;
+  font-style: normal;
 }
 
 html {
-	overflow-x: hidden;
-	/* height: 100%; */
+  overflow-x: hidden;
+  height: 100%;
 }
 
 :root {
-	font-synthesis: none;
-	text-rendering: optimizeLegibility;
-	text-size-adjust: none;
-	text-decoration-skip-ink: auto;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	-webkit-text-size-adjust: 100%;
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  text-size-adjust: none;
+  text-decoration-skip-ink: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
 }
 
 body {
-	width: 100%;
-	min-height: 100dvh;
-	overflow: hidden;
-	font-size: 0.9rem;
-	position: relative;
+  width: 100%;
+  min-height: 100dvh;
+  overflow: hidden;
+  font-size: 0.9rem;
+  position: relative;
 }
 
 body::selection {
-	background-color: #353535;
+  background-color: #a36404;
 }
 
 .wrapper {
-	height: 100%;
-	margin: 0 auto;
-	overflow: hidden;
+  height: 100%;
+  margin: 0 auto;
+  overflow: hidden;
 }
 
 .wrapper :is(a, .icon, button) {
-	cursor: pointer;
-	text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
 }
 
 .wrapper .icon {
-	display: grid;
-	place-items: center;
-	will-change: filter;
-	transition: filter 300ms;
+  display: grid;
+  place-items: center;
+  will-change: filter;
+  transition: filter 300ms;
 }
 .wrapper .icon:hover,
 .wrapper a:hover {
-	filter: drop-shadow(0 0 1em var(--dp-shadow));
+  /* filter: drop-shadow(0 0 0.2em var(--drop-shadow)); */
 }
 
 .wrapper :is(a:hover, svg:hover) {
-	transition: color, border-color, text-decoration-color, fill, stroke;
-	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-	transition-duration: 150ms;
+  transition: color, border-color, text-decoration-color, fill, stroke;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 
 .wrapper :where(a) {
-	text-decoration: none;
+  text-decoration: none;
 }
 
 .wrapper :where(img) {
-	object-fit: cover;
-	display: grid;
-	border-radius: inherit;
+  display: grid;
+  border-radius: inherit;
 }
 
 .wrapper :where(ul li) {
-	list-style-type: none;
+  list-style-type: none;
 }
 
 .wrapper :where(button) {
-	transition: border-color 0.25s;
-	outline: none;
-}
-
-/* scroll-snap */
-.wrapper .scroll-snap {
-	scroll-snap-type: inline mandatory;
-	scroll-padding-inline: 1em;
-}
-.wrapper .scroll-snap > * {
-	scroll-snap-align: start;
-}
-
-.wrapper .scroll-snap::-webkit-scrollbar {
-	width: 0;
-	height: 0;
+  transition: border-color 0.25s;
+  outline: none;
 }
 
 .wrapper input::-webkit-inner-spin-button,
 .wrapper input::-webkit-outer-spin-button {
-	display: none;
+  display: none;
 }
 
 input:-internal-autofill-selected {
-	appearance: menulist-button;
-	background-image: none !important;
-	background: none !important;
-	color: fieldtext !important;
+  appearance: menulist-button;
+  background-image: none !important;
+  background: none !important;
+  color: fieldtext !important;
 }
 
 .wrapper ::-webkit-scrollbar {
-	width: 3px;
-	height: 100%;
+  width: 3px;
+  height: 100%;
 }
 
 .wrapper ::-webkit-scrollbar-track {
-	background: rgba(23, 32, 44, 0.561);
+  background: rgba(23, 32, 44, 0.5);
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-	background: #718494;
-	border-radius: 999px;
+  background: var(--scroll-bg);
+  border-radius: 999px;
 }
