--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,7 +38,9 @@ body::selection {
 }
 
 .wrapper {
-  height: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
   margin: 0 auto;
   overflow: hidden;
 }
