feat: payment integration

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -23,7 +23,7 @@
     --secondary-100: #ff6c02;
 
     --border-secondary: #fcf3f348;
-    --border-secondary-100: #000;
+    --border-secondary-100: #e5e7eb;
 
     --gray: #777;
     --gray-100: #e4e4e7;
